--- a/views/auth.html
+++ b/views/auth.html
@@ -30,12 +30,10 @@
   </head>
   <body>
     <div
-      class="container"
-      style="background-color:red;min-width: 400px;padding:50px;max-width: 400px;"
+      class="container bg-light"
+      style="min-width: 400px;padding:50px;max-width: 400px;"
     >
-      <a href="/api/login" style="color:white;"
-        ><h2>login through discord</h2></a
-      >
+      <a href="/api/login"><h2>login through discord</h2></a>
     </div>
 
     <!-- Optional JavaScript -->
