Implemented daily server seed model

--- a/views/index.html
+++ b/views/index.html
@@ -108,7 +108,7 @@
         id="verify"
         style="text-align: center;font-size: 10px;overflow-wrap:break-word;display: none;">
         <hr/>
-        <span id="verifytext">Waiting for flip... </span> <a href="https://repl.it/repls/SkeletalSquigglyClasses">verify game here</a>
+        <span id="verifytext">Waiting for flip..</span> <br/> <b><span id="dailysecrettext"></b></span> <br/> <a href="https://repl.it/repls/SkeletalSquigglyClasses">verify game here</a>
       </div>
 
       <div id="advanced" style="display: none">
